<?xml version="1.0" encoding="utf-8"?>
<resources>



    <string name="app_name">Minuku</string>
    <string name="welcome">Welcom to Minuku</string>
    <string name="action_settings">Settings</string>
    <string name="start_recording">Hit START to start recording</string>
    <string name="check_in_activity">CHECK IN whenever you change activity</string>
    <string name="stop_recording">Hit STOP to stop recording</string>
    <string name="recording_task">Task\ </string>


    <string name="add_details_recording_btn">ADD DETAILS</string>
    <string name="checkin_btn">CHECKPOINT</string>
    <string name="stop_btn">STOP</string>
    <string name="start_btn">START</string>

    <!--annotation interface -->
    <string name="annotate_label_text">Activity type</string>
    <string name="annotate_note_text">Note</string>
    <string name="annotate_title_text">Add Labels and Notes</string>


    <!--Google Play Service -->

    <!-- App package -->

    <!--minuku-->
    <string name="applicaiton_package_minuku">edu.umich.si.inteco.minuku</string>

    <!--launcher-->
    <string name="applicaiton_package_launcher">com.sec.android.app.launcher</string>

    <!--app store-->
    <string name="applicaiton_package_google_play_store">com.android.vending</string>

    <!--social media-->
    <string name="applicaiton_package_facebook">com.facebook.katana</string>
    <string name="applicaiton_package_twitter">Submit</string>
    <string name="applicaiton_package_instagram">Submit</string>

    <!--media-->
    <string name="applicaiton_package_youtube">com.google.android.youtube</string>

    <!--social messenger-->
    <string name="applicaiton_package_facebook_messenger">com.facebook.orca</string>
    <string name="applicaiton_package_line">jp.naver.line.android</string>
    <string name="applicaiton_package_wechat">com.tencent.mm</string>
    <string name="applicaiton_package_whatsapp">com.whatsapp</string>
    <string name="applicaiton_package_hangout">com.google.android.talk</string>

    <!--email -->
    <string name="applicaiton_package_gmail">com.google.android.gm</string>

    <!-- Questionnaire -->
    <string name="questionnaire_submit_button_label">Submit</string>
    <string name="questionnaire_other_option_label">Other</string>

    <!--Permission -->
    <string name="permission_location_rationale">The app needs location for context</string>
    <string name="permission_camera_rationale">The app needs camera for context</string>
    <string name="permission_write_exterinal_storage_rationale">The app needs to write logs to your memory</string>
    <string name="ok">OK</string>



    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Location Service -->
    <string name="location_updated_message">Location updated</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <!-- study condition -->
    <string name="study_condition_participatory">Participatory Labeling</string>
    <string name="study_condition_in_situ">In Situ Labeling</string>
    <string name="study_condition_post_hoc">Post Hoc Labeling</string>


    <!--Label Spinner-->
    <string name="activity_prompt">Choose an activity</string>
    <string-array name="activity_type">
        <item>Choose an activity</item>
        <item>Biking</item>
        <item>In a car\. (I\'m the driver)</item>
        <item>In a car\. (I\'m NOT the driver)</item>
        <item>Taking a bus</item>
        <item>Walking outdoors</item>
        <item>Walking indoors</item>
    </string-array>
    
    <!--messages-->
    <!-- Google Play -->
        <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">
        The version of Google Play services on this device is not authentic
    </string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">
        The app is not licensed to the user
    </string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>


    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">
        Latitude should be in the range -90 to 90 degrees
    </string>
    <string name="longitude_error_message">
        Longitude should be in the range -180 to 180 degrees
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>

</resources>
