<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin">


    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:name="com.google.android.gms.maps.MapFragment"

        android:id="@+id/mapFragment"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Time: "
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/timeLabel"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/annotate_label_text"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/labelTitle" />


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:entries="@array/activity_type"
        android:layout_gravity="bottom"
        android:prompt="@string/activity_prompt"
        android:id="@+id/labelSpinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/annotate_note_text"
        android:layout_gravity="bottom"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/commentTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minHeight="60dp"
        android:layout_gravity="bottom"
        android:ems="10"
        android:id="@+id/noteEditText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questionnaire_submit_button_label"
        android:id="@+id/annotationSubmitButton"
        android:layout_gravity="bottom" />



</LinearLayout>