<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="412dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/start_recording_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in_activity" />

        <Chronometer
            android:id="@+id/recording_chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format="00:00:00"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/checkin_Button"
                android:layout_width="116dp"
                android:layout_height="wrap_content"                
                android:text="@string/start_btn" />

            <Button
                android:id="@+id/stop_Button"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:text="@string/stop_btn" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>