<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="412dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/start_recording_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_recording" />

        <TextView
            android:id="@+id/stop_recording_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_recording" />

        <Chronometer
            android:id="@+id/recording_chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format="00:00:00"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/start_recording_Button"
                android:layout_width="116dp"
                android:layout_height="wrap_content"                
                android:text="START" />

            <Button
                android:id="@+id/stop_recording_Button"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:text="STOP" />
        </LinearLayout>

        
        <Button
	            android:id="@+id/add_details_Button"
	            android:layout_width="232dp"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="16dp"
	            android:text="@string/add_details_recording_btn" />
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/recording_task_vertical_margin" 
            android:orientation="horizontal" >
   
	        <TextView
	            android:id="@+id/recording_task_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"  
	            android:text="@string/recording_task"
	            android:textSize="16sp" />
	
	        <TextView
	            android:id="@+id/recording_task_textview"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"          	         
	           android:text="" 
	            android:textSize="16sp"/>
        
        </LinearLayout>
        
    </LinearLayout>

</FrameLayout>